RESOLVED FIXED 244072
Element code shouldn't know about the RenderListBox rendering
https://bugs.webkit.org/show_bug.cgi?id=244072
Summary Element code shouldn't know about the RenderListBox rendering
Simon Fraser (smfr)
Reported 2022-08-17 21:02:41 PDT
listBoxElementBoundingBox() knows too much about RenderListBox.
Attachments
Simon Fraser (smfr)
Comment 1 2022-08-17 21:08:24 PDT
EWS
Comment 2 2022-08-18 10:11:29 PDT
Committed 253563@main (d270433c39ef): <https://commits.webkit.org/253563@main> Reviewed commits have been landed. Closing PR #3436 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-08-18 10:12:18 PDT
Note You need to log in before you can comment on or make changes to this bug.