Element code shouldn't know about the RenderListBox rendering https://bugs.webkit.org/show_bug.cgi?id=244072

Reviewed by Alan Bujtas.

Element::getClientRects() has some custom code for HTMLOptionElement and HTMLOptGroupElement
because they are special; they don't have their own renderers, but are draws as rows of the
RenderListBox. But Element code shouldn't know about the details of RenderListBox, so move
some code from listBoxElementBoundingBox() to RenderListBox.

* Source/WebCore/dom/Element.cpp:
(WebCore::listBoxElementBoundingBox):
* Source/WebCore/rendering/RenderListBox.cpp:
(WebCore::RenderListBox::itemBoundingBoxRect const): Made const.
(WebCore::RenderListBox::optionRowIndex const): Helper that gets the row for an
<option>. This is not HTMLOptionElement::index(), because that only tracks <option>s,
yet <optgroup> elements have a header row. I believe the old code got this wrong.
(WebCore::RenderListBox::localBoundsOfOption const):
(WebCore::RenderListBox::localBoundsOfOptGroup const):
(WebCore::RenderListBox::listIndexAtOffset const): Made const
(WebCore::RenderListBox::itemBoundingBoxRect): Deleted.
(WebCore::RenderListBox::listIndexAtOffset): Deleted.
* Source/WebCore/rendering/RenderListBox.h:

Canonical link: https://commits.webkit.org/253563@main